<resources>
    <string name="app_name">PASIdostawa</string>
    <string name="login">Zaloguj się</string>
    <string name="login_button">Loguj</string>
    <string name="order">Zamówienie</string>
    <string name="history_order">Historia zamówień</string>
    <string name="car">Samochód</string>
    <string name="calendar">Zmiany</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="reset_pwd">Zresetuj hasło</string>
    <string name="developers">Developed by: Paweł Niedziółka</string>
    <string name="developers2">and Krzysztof Górski</string>
    <string name="f_pwd">Zapomniałeś hasła?</string>
    <string name="haslo">hasło</string>
    <string name="login_hint">ID pracownika</string>
    <string name="forget">Zresetuj hasło</string>
    <string name="Forget_first_name">Podaj imię</string>
    <string name="Forget_second_name">Podaj nazwisko</string>
    <string name="Forget_ID">Podaj ID pracownika</string>
    <string name="Forget_pswd">Podaj nowe hasło</string>
    <string name="Forget_new_pswd">Powtórz nowe hasło</string>
    <string name="Forget">Resetuj hasło</string>
    <string name="navigation_drawer_open">Otworz pasek nawigacyjny</string>
    <string name="navigation_drawer_close">Zamknij pasek nawigacyjny</string>
    <string name="refresh">Odśwież</string>
    <string name="accepted">Odebrane</string>
    <string name="denied">Nieodebrane</string>
    <string name="phone">Zadzwoń</string>
    <string name="lokalizacja">Lokalizacja</string>
    <string name="calendar1">Kalendarz zmian</string>
    <string name="calendar2">Wybrana zmiana</string>
    <string name="kolizja">Zgłoś kolizję</string>
</resources>