<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:title="@string/order"
            android:icon="@drawable/nav_order"/>
        <item
            android:id="@+id/nav_history_orders"
            android:title="@string/history_order"
            android:icon="@drawable/nav_history_orders"/>
        <item
            android:id="@+id/nav_car"
            android:title="@string/car"
            android:icon="@drawable/nav_car" />
        <item
            android:id="@+id/nav_calendar"
            android:title="@string/calendar"
            android:icon="@drawable/nav_calendar" />
    </group>


        <item android:title="@string/settings">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_reset_password"
                    android:title="@string/reset_pwd"
                    android:icon="@drawable/nav_reset_password" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/nav_logout" />

                </group>
            </menu>
        </item>>
</menu>